updated frontend templates and js

--- a/frontend/templates/home/django-material-kit/api.html
+++ b/frontend/templates/home/django-material-kit/api.html
@@ -27,8 +27,10 @@
   </div>
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
-      <div class="section text-center">
-        <h2 class="title">Content coming soon...</h2>
+      <div class="section text-start">
+        <h2 class="title">Maine-eDNA Metadata's API was written in the <a href="https://www.django-rest-framework.org/">Django REST Framework</a> and all API
+          documentation are automatically generated with the <a href="https://github.com/axnsan12/drf-yasg">drf-yasg library</a>.
+          The drf-yasg documentation includes all Create, Read, Update, and Delete (CRUD) operations.</h2>
       </div>
     </div>
   </div>
