updated frontend templates and js

--- a/frontend/templates/home/django-material-kit/api.html
+++ b/frontend/templates/home/django-material-kit/api.html
@@ -28,6 +28,7 @@
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
       <div class="section text-start">
+        <h5 class="font-weight-bolder mt-3">What is an API?</h5>
         <p class="pe-md-5 mb-4">
           There are several ways information within the database can be accessed. One accepted standard is through an
           Application Programming Interface, or API. An API is a structured way to allow for programmatic access of
