--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -70,34 +70,22 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-animation dropdown-menu-end dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                 <div class="d-none d-lg-block">
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                  <li class="nav-item list-group-item border-0 p-0">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects.html">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
-                          <span class="text-sm">See all projects</span>
-                        </div>
-                      </div>
+                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                      <span class="text-sm">See all projects</span>
                     </a>
                   </li>
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                  <li class="nav-item list-group-item border-0 p-0">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                          <span class="text-sm">See all publications</span>
-                        </div>
-                      </div>
+                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                      <span class="text-sm">See all publications</span>
                     </a>
                   </li>
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                  <li class="nav-item list-group-item border-0 p-0">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/metadata-standards.html">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
-                          <span class="text-sm">See metadata standards</span>
-                        </div>
-                      </div>
+                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
+                      <span class="text-sm">See metadata standards</span>
                     </a>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
