--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -20,7 +20,7 @@
             <li class="nav-item dropdown dropdown-hover mx-2 ms-lg-6">
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages8" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="material-icons opacity-6 me-2 text-md">dashboard</i>
-                Pages
+                About
                 <img src="{% static 'assets/img/shapes/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
                 <img src="{% static 'assets/img/shapes/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
               </a>
@@ -31,6 +31,15 @@
                   </h6>
                   <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                     <span>About Us</span>
+                  </a>
+                  <a href="/main/projects.html" class="dropdown-item border-radius-md">
+                    <span>Projects</span>
+                  </a>
+                  <a href="/main/publications.html" class="dropdown-item border-radius-md">
+                    <span>Publications</span>
+                  </a>
+                  <a href="/main/metadata-standards.html" class="dropdown-item border-radius-md">
+                    <span>Standards</span>
                   </a>
                   <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
                     <span>Contact Us</span>
@@ -49,6 +58,15 @@
                   <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                     <span>About Us</span>
                   </a>
+                  <a href="/main/projects.html" class="dropdown-item border-radius-md">
+                    <span>Projects</span>
+                  </a>
+                  <a href="/main/publications.html" class="dropdown-item border-radius-md">
+                    <span>Publications</span>
+                  </a>
+                  <a href="/main/metadata-standards.html" class="dropdown-item border-radius-md">
+                    <span>Standards</span>
+                  </a>
                   <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
                     <span>Contact Us</span>
                   </a>
@@ -64,30 +82,12 @@
             <li class="nav-item dropdown dropdown-hover mx-2">
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="material-icons opacity-6 me-2 text-md">view_day</i>
-                Sections
+                Documentation
                 <img src="{% static 'assets/img/shapes/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
                 <img src="{% static 'assets/img/shapes/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
               </a>
               <ul class="dropdown-menu dropdown-menu-animation dropdown-menu-end dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                 <div class="d-none d-lg-block">
-                  <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects.html">
-                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
-                      <span class="text-sm">See all projects</span>
-                    </a>
-                  </li>
-                  <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
-                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                      <span class="text-sm">See all publications</span>
-                    </a>
-                  </li>
-                  <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/metadata-standards.html">
-                      <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
-                      <span class="text-sm">See metadata standards</span>
-                    </a>
-                  </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/sop.html">
                       <div class="w-100 d-flex align-items-center justify-content-between">
