--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -26,10 +26,20 @@
                   <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-xl mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
                     <div class="d-none d-lg-block">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
-                        Landing Pages
+                        Overview Pages
                       </h6>
                       <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                         <span>About Us</span>
+                      </a>
+
+                      <a href="/main/projects.html" class="dropdown-item border-radius-md">
+                        <span>Projects</span>
+                      </a>
+                      <a href="/main/publications.html" class="dropdown-item border-radius-md">
+                        <span>Publications</span>
+                      </a>
+                      <a href="/main/metadata-standards.html" class="dropdown-item border-radius-md">
+                        <span>Standards</span>
                       </a>
                       <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
                         <span>Contact Us</span>
@@ -43,10 +53,19 @@
                     </div>
                     <div class="d-lg-none">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
-                        Landing Pages
+                        Overview Pages
                       </h6>
                       <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                         <span>About Us</span>
+                      </a>
+                      <a href="/main/projects.html" class="dropdown-item border-radius-md">
+                        <span>Projects</span>
+                      </a>
+                      <a href="/main/publications.html" class="dropdown-item border-radius-md">
+                        <span>Publications</span>
+                      </a>
+                      <a href="/main/metadata-standards.html" class="dropdown-item border-radius-md">
+                        <span>Standards</span>
                       </a>
                       <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
                         <span>Contact Us</span>
@@ -60,44 +79,17 @@
                     </div>
                   </div>
                 </li>
+
+                {% if request.user.is_authenticated %}
+
                 <li class="nav-item dropdown dropdown-hover mx-2">
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuBlocks" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">view_day</i>
-                    Sections
+                    Documentation
                     <img src="{% static 'assets/img/shapes/down-arrow-dark.svg' %}" alt="down-arrow" class="arrow ms-auto ms-md-2">
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                     <div class="d-none d-lg-block">
-                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects.html">
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
-                              <span class="text-sm">See all projects</span>
-                            </div>
-                          </div>
-                        </a>
-                      </li>
-                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                              <span class="text-sm">See all publications</span>
-                            </div>
-                          </div>
-                        </a>
-                      </li>
-                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/metadata-standards.html">
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
-                              <span class="text-sm">See metadata standards</span>
-                            </div>
-                          </div>
-                        </a>
-                      </li>
                       <li class="nav-item dropdown dropdown-hover dropdown-subitem">
                         <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/sop.html">
                           <div class="w-100 d-flex align-items-center justify-content-between">
@@ -144,36 +136,6 @@
                       <div class="col-md-12">
                         <div class="d-flex mb-2 mt-3">
                           <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-badge text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-notification-70 text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-notification-70 text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
                             <i class="ni ni-laptop text-gradient text-primary"></i>
                           </div>
                           <div class="w-100 d-flex align-items-center justify-content-between">
@@ -211,6 +173,9 @@
                     </div>
                   </ul>
                 </li>
+
+                {% endif %}
+
                 <li class="nav-item dropdown dropdown-hover mx-2">
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md">article</i>
@@ -256,18 +221,18 @@
                   </a>
                 </li>
                 {% endif %}
+
+                {% if request.user.is_authenticated %}
                 <li class="nav-item my-auto ms-3 ms-lg-0">
                   <a href="/dashboard/" target="_blank" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Dashboard</a>
                 </li>
-
-                {% if request.user.is_authenticated %}
-                  <li class="nav-item ms-lg-auto">
-                    <a class="nav-link nav-link-icon me-2" 
-                      href="{% url 'logout' %}">
-                      <i class="fa fa-sign-out me-1"></i>
-                      <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sign out">Logout</p>
-                    </a>
-                  </li>          
+                <li class="nav-item ms-lg-auto">
+                  <a class="nav-link nav-link-icon me-2"
+                    href="{% url 'logout' %}">
+                    <i class="fa fa-sign-out me-1"></i>
+                    <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sign out">Logout</p>
+                  </a>
+                </li>
                 {% endif %}
 
               </ul>
