--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -23,7 +23,7 @@
             <div class="dropdown-menu ms-n3 dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages5">
               <div class="d-none d-lg-block">
                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
-                  Overview Pages
+                  Overview
                 </h6>
                 <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                   <span>About Us</span>
@@ -49,7 +49,7 @@
               </div>
               <div class="d-lg-none">
                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
-                  Overview Pages
+                  Overview
                 </h6>
                 <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                   <span>About Us</span>
