--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -26,7 +26,7 @@
                   <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-xl mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
                     <div class="d-none d-lg-block">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
-                        Overview Pages
+                        Overview
                       </h6>
                       <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                         <span>About Us</span>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="d-lg-none">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
-                        Overview Pages
+                        Overview
                       </h6>
                       <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                         <span>About Us</span>
