--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -115,7 +115,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="https://www.linkedin.com/in/melissa-kimble/">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/logos/kimble-sq.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/kimble-sq.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -265,7 +265,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="https://www.linkedin.com/in/keijaoh-campbell">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/logos/keijaoh-sq.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/keijaoh-sq.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
