updated public templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -551,7 +551,7 @@
             <h6 class="text-sm">Help & Support</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="/main/contact-us.html" target="_blank">
+                <a class="nav-link" href="{% url 'contact_us' %}" target="_blank">
                   Contact Us
                 </a>
               </li>
