--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -28,20 +28,20 @@
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
                         Overview
                       </h6>
-                      <a href="/main/about-us.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                         <span>About Us</span>
                       </a>
 
-                      <a href="/main/projects.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'projects' %}" class="dropdown-item border-radius-md">
                         <span>Projects</span>
                       </a>
-                      <a href="/main/publications.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'publications' %}" class="dropdown-item border-radius-md">
                         <span>Publications</span>
                       </a>
-                      <a href="/main/metadata-standards.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'metadata_standards' %}" class="dropdown-item border-radius-md">
                         <span>Standards</span>
                       </a>
-                      <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'contact_us' %}" class="dropdown-item border-radius-md">
                         <span>Contact Us</span>
                       </a>
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
@@ -55,19 +55,19 @@
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
                         Overview
                       </h6>
-                      <a href="/main/about-us.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                         <span>About Us</span>
                       </a>
-                      <a href="/main/projects.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'projects' %}" class="dropdown-item border-radius-md">
                         <span>Projects</span>
                       </a>
-                      <a href="/main/publications.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'publications' %}" class="dropdown-item border-radius-md">
                         <span>Publications</span>
                       </a>
-                      <a href="/main/metadata-standards.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'metadata_standards' %}" class="dropdown-item border-radius-md">
                         <span>Standards</span>
                       </a>
-                      <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
+                      <a href="{% url 'contact_us' %}" class="dropdown-item border-radius-md">
                         <span>Contact Us</span>
                       </a>
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
@@ -186,7 +186,7 @@
                     <div class="d-none d-lg-block">
                       <ul class="list-group">
                         <li class="nav-item list-group-item border-0 p-0">
-                          <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/contact-us.html">
+                          <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="{% url 'contact_us' %}">
                             <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                             <span class="text-sm">Get support from experts</span>
                           </a>
@@ -201,7 +201,7 @@
                     </div>
                     <div class="row d-lg-none">
                       <div class="col-md-12 g-0">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/contact-us.html">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="{% url 'contact_us' %}">
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                           <span class="text-sm">Get support from experts</span>
                         </a>
