updated contact information form

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -59,14 +59,14 @@
                     <div class="row">
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
-                          <label>My name is</label>
+                          <label>Full Name</label>
                           <input type="text" class="form-control" placeholder="Full Name">
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
-                          <label>I'm looking for</label>
-                          <input type="text" class="form-control" placeholder="What you love">
+                          <label>Email</label>
+                          <input type="email" class="form-control" placeholder="example@mail.com">
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
