added user update form to dashboard frontend

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -52,8 +52,8 @@
               <div class="col-lg-7">
                 <form class="p-3" id="contact-form" method="post">
                   <div class="card-header px-4 py-sm-5 py-3">
-                    <h2>Say Hi!</h2>
-                    <p class="lead"> We'd like to talk with you.</p>
+                    <h2>Contact Us</h2>
+                    <p class="lead"> For further questions, please fill out and submit this form.</p>
                   </div>
                   <div class="card-body pt-1">
                     <div class="row">
@@ -71,14 +71,14 @@
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
-                          <label>Your message</label>
-                          <textarea name="message" class="form-control" id="message" rows="6" placeholder="I want to say that..."></textarea>
+                          <label>How can we help you?</label>
+                          <textarea name="message" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters"></textarea>
                         </div>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-6 text-end ms-auto">
-                        <button type="submit" class="btn bg-gradient-info mb-0">Send Message</button>
+                        <button type="submit" class="btn bg-gradient-dark w-100">Send Message</button>
                       </div>
                     </div>
                   </div>
