--- a/frontend/templates/home/django-material-dashboard/profile.html
+++ b/frontend/templates/home/django-material-dashboard/profile.html
@@ -38,7 +38,7 @@
                       <h6 class="mb-0">Profile Information</h6>
                     </div>
                     <div class="col-md-4 text-end">
-                      <a href="javascript:;">
+                      <a href="{% url 'dashboard_profile_update' %}">
                         <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Profile"></i>
                       </a>
                     </div>
