--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -20,7 +20,7 @@
           {% csrf_token %}
           {{ form|crispy }}
           <br>
-          <button type="submit" class="btn btn-outline-primary">{% translate 'Update Profile' %}</button>
+          <button type="submit">Update Profile</button>
         </form>
 
       </div>
