--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -18,7 +18,7 @@
 
         <form method="post">
           {% csrf_token %}
-          {% crispy form %}
+          {% crispy form form.helper%}
           <br>
           <button type="submit" class="btn bg-gradient-dark w-100">Update Profile</button>
         </form>
