--- a/frontend/templates/home/django-material-kit/ui-input-forms.html
+++ b/frontend/templates/home/django-material-kit/ui-input-forms.html
@@ -80,7 +80,7 @@
           </div>
           <div class="tab-content tab-space">
             <div class="tab-pane active" id="preview-forms-simple">
-              <iframe class="w-100 height-600" srcdoc='<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+              <iframe class="w-100 height-600" srcdoc='<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no'>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
         <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
         <!-- Material Icons -->
@@ -88,11 +88,14 @@
 
         <link id="pagestyle" href="https://demos.creative-tim.com/material-kit/assets/css/material-kit.min.css?v=3.0.0" rel="stylesheet" />
         <section>
+
   <div class="container py-4">
     <div class="row">
       <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column">
         <h3 class="text-center">Contact us</h3>
+
         <form role="form" id="contact-form" method="post" autocomplete="off">
+
           <div class="card-body">
             <div class="row">
               <div class="col-md-6">
@@ -130,10 +133,13 @@
               </div>
             </div>
           </div>
+
         </form>
+
       </div>
     </div>
   </div>
+
 </section>
 
         <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
