updated frontend templates

--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -14,8 +14,11 @@
         <span class="mask bg-gradient-dark opacity-6"></span>
       </div>
       <div class="card card-body mx-3 mx-md-4 mt-n6">
-
         {{ form }}
+
+        <div class="col-md-12">
+          <button type="submit" class="btn bg-gradient-dark w-100">Send Message</button>
+        </div>
 
       </div>
     </div>
