updated frontend templates

--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -50,7 +50,7 @@
 
               <div class="custom-file mb-4">
                 <div class="input-group input-group-dynamic">
-                  Currently: <a href="{{ url profile_image.profile_image_url }}">{{ profile_image.profile_image_filename }}</a>
+                  Currently: <a href="{{ profile_image.profile_image_url }}">{{ profile_image.profile_image_filename }}</a>
                     <label for="profile_image-clear_id">Clear</label><br>
                     <input type="checkbox" class="form-check-input" name="profile_image-clear" id="profile_image-clear_id">
                     Change:
