--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -1,6 +1,5 @@
 {% extends "layouts/django-material-dashboard/base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
 
 {% block title %} Profile {% endblock %} 
 
@@ -18,9 +17,13 @@
         <div class="row">
           <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column">
             <h3 class="text-center">Update Profile</h3>
-
+            <form role="form" id="contact-form" method="post" autocomplete="off">
               {% csrf_token %}
-              {% crispy form %}
+              {{ form }}
+              <div class="col-md-12">
+                <button type="submit" class="btn bg-gradient-dark w-100">Update Profile</button>
+              </div>
+            </form>
           </div>
       </div>
       </div>
