--- a/frontend/templates/home/django-material-kit/ui-input-inputs.html
+++ b/frontend/templates/home/django-material-kit/ui-input-inputs.html
@@ -221,7 +221,7 @@
           </div>
           <div class="tab-content tab-space">
             <div class="tab-pane active" id="preview-input-icon-label">
-              <iframe class="w-100 height-300" srcdoc='<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+              <iframe class="w-100 height-300" srcdoc='<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no'>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
         <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
         <!-- Material Icons -->
