updated frontend templates

--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <div class="container-fluid px-2 px-md-4">
+    <div class="container px-2 px-md-4">
       <div class="page-header min-height-300 border-radius-xl mt-4" 
            style="background-image: url('https://images.unsplash.com/photo-1533084417605-e538a510d50a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');">
         <span class="mask bg-gradient-dark opacity-6"></span>
