updated frontend templates

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -33,7 +33,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white {% if 'field-sites' in segment %} active bg-gradient-primary {% endif %}"
+          <a class="nav-link text-white {% if 'field-site-add' in segment %} active bg-gradient-primary {% endif %}"
              href="/dashboard/field-site-add.html">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">add_box</i>
