updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -439,8 +439,8 @@
             </div>
           </div>
           <div class="col-md-5 col-12 my-auto">
-            <a target="_blank" href="https://appseed.us/product/django-material-kit2-pro">
-              <img class="w-100 border-radius-lg shadow-lg" src="https://s3.amazonaws.com/creativetim_bucket/products/46/original/material-kit-pro.jpg?1632843641" alt="Product Image">
+            <a target="_blank" href="/dashboard/">
+              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/screenshots/screenshot-dashboard.png' %}" alt="dashboard">
             </a>
           </div>
         </div>
