updated frontend templates

--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base.html" %}
 {% load static %}
 
-{% block title %} Profile {% endblock %} 
+{% block title %} Update {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
