--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base.html" %}
 {% load static %}
 
-{% block title %} About US {% endblock %} 
+{% block title %} About Us {% endblock %}
 
 {% block body_class %} about-us {% endblock %}
 
