--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base.html" %}
 {% load static %}
 
-{% block title %} Blog Author {% endblock %}
+{% block title %} Contact Us {% endblock %}
 
 {% block body_class %} blog-author {% endblock %}
 
