--- a/frontend/templates/home/django-material-kit/project-detail.html
+++ b/frontend/templates/home/django-material-kit/project-detail.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base.html" %}
 {% load static %}
 
-{% block title %} Projects {% endblock %}
+{% block title %} Detail {% endblock %}
 
 {% block body_class %} index-page {% endblock %}
 
