--- a/frontend/templates/home/django-material-dashboard/sample-label-detail.html
+++ b/frontend/templates/home/django-material-dashboard/sample-label-detail.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-dashboard/base.html" %}
 {% load static %}
 
-{% block title %} Template {% endblock %} 
+{% block title %} Detail {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
