--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base.html" %}
 {% load static %}
 
-{% block title %} Template Page {% endblock %} 
+{% block title %} Publications {% endblock %}
 
 {% block body_class %} index-page {% endblock %}
 
